# python-grpc-sample

./: .pre-commit-config.yaml  LICENSE  mine.proto  pyproject.toml
grpc-stubs/: __init__.pyi  _channel.pyi  _typing.py
mine/: __init__.py  _message.py  _protocol.py  pb2.py  rpc.py  types.py
mine/_proto/: __init__.py  mine_pb2.py  mine_pb2.pyi  mine_pb2_grpc.py  mine_pb2_grpc.pyi
mine_common/: __init__.py
mine_server/: __init__.py  __main__.py
tests/: __init__.py  conftest.py  test_fizzbuzz.py  test_mine.py
