[tool.poetry]
name = "mine"
version = "0.0.0"
description = "Sample gRPC service"
authors = ["ijknabla <ijknabla@gmail.com>"]
license = "LICENSE"
readme = "README.md"
packages = [
    {include = "mine"},
    {include = "mine_client"},
    {include = "mine_server"},
]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
grpcio = "^1.54.2"
protobuf = "^4.23.2"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
mypy = "^1.3.0"
pyproject-flake8 = "^6.0.0.post1"
grpcio-tools = "^1.54.2"
types-setuptools = "^67.8.0.0"
grpc-stubs = "^1.53.0.2"


[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"
pytest-asyncio = "^0.21.0"
pytest-grpc = "^0.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
extend-exclude = "^.*_pb2.*\\.py$"
line-length = 100

[tool.flake8]
exclude = '.venv,.git,**/*_pb2*.py'
max-line-length = 100

[tool.isort]
line_length = 100
profile = "black"
skip_glob = "**/*_pb2*.py"

[tool.mypy]
namespace_packages = true
explicit_package_bases = true
